--- a/styleguide/item-components-button.html
+++ b/styleguide/item-components-button.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kaspersky</title>
+    <title>exp-ui</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,300">
     <link rel="stylesheet" href="kss-assets/vendor/prism.css">
     <link rel="stylesheet" href="kss-assets/css/kss.css">
-    <link rel="stylesheet" href="../src/index.scss"/>
+    <link rel="stylesheet" href="./exp-ui/index.scss"/>
 
   </head>
 
@@ -22,7 +22,7 @@
         <a class="kss-header__hamburger-trigger">
           <div class="kss-header__hamburger"></div>
         </a>
-        <h1 class="kss-header__title kss-title">Kaspersky</h1>
+        <h1 class="kss-header__title kss-title">exp-ui</h1>
       </section>
     </header>
     <!-- /header. -->
@@ -30,7 +30,7 @@
 
     <!-- navigation. -->
     <section class="kss-navigation">
-      <h1 class="kss-navigation__title kss-title">Kaspersky</h1>
+      <h1 class="kss-navigation__title kss-title">exp-ui</h1>
       <ul class="kss-nav">
         <li class="kss-nav__item">
           <a href="index.html">
@@ -66,7 +66,7 @@
             <header class="kss-section kss-section--depth-2" id="kssref-components-button">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/components/button/button.scss</span>, line <span>2</span></p>
+                <p class="kss-section__source">Source: <span>src/components/button/_button.scss</span>, line <span>1</span></p>
 
               <a class="kss-section__permalink" href="#kssref-components-button">
                 <h2 class="kss-section__item kss-section__item--depth-2">
@@ -75,7 +75,7 @@
                 </h2>
               </a>
 
-                <div class="kss-section__description"><p>Button stylee.</p>
+                <div class="kss-section__description"><p>Button style normalize.</p>
 </div>
 
             </article>
