--- a/styleguide/section-base.html
+++ b/styleguide/section-base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kaspersky</title>
+    <title>exp-ui</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,300">
     <link rel="stylesheet" href="kss-assets/vendor/prism.css">
     <link rel="stylesheet" href="kss-assets/css/kss.css">
-    <link rel="stylesheet" href="../src/index.scss"/>
+    <link rel="stylesheet" href="./exp-ui/index.scss"/>
 
   </head>
 
@@ -22,7 +22,7 @@
         <a class="kss-header__hamburger-trigger">
           <div class="kss-header__hamburger"></div>
         </a>
-        <h1 class="kss-header__title kss-title">Kaspersky</h1>
+        <h1 class="kss-header__title kss-title">exp-ui</h1>
       </section>
     </header>
     <!-- /header. -->
@@ -30,7 +30,7 @@
 
     <!-- navigation. -->
     <section class="kss-navigation">
-      <h1 class="kss-navigation__title kss-title">Kaspersky</h1>
+      <h1 class="kss-navigation__title kss-title">exp-ui</h1>
       <ul class="kss-nav">
         <li class="kss-nav__item">
           <a href="index.html">
@@ -90,7 +90,7 @@
             <section class="kss-section kss-section--depth-2" id="kssref-base-colors">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/themes/experimentality/theme.scss</span>, line <span>2</span></p>
+                <p class="kss-section__source">Source: <span>src/themes/experimentality/theme.scss</span>, line <span>1</span></p>
 
               <a class="kss-section__permalink" href="#kssref-base-colors">
                 <h2 class="kss-section__item kss-section__item--depth-2">
@@ -99,20 +99,20 @@
                 </h2>
               </a>
 
-                <div class="kss-section__description"><p>Colors we use for higlighting states.</p>
+                <div class="kss-section__description"><p>Colors we use for higlighting states by brand ?????.</p>
 </div>
 
                 <ul class="kss-parameters">
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #00BCFF; primary
+                      #00BCFF; Primary Color Blue
 
                     </p>
                     <code class="kss-parameters__name">$primary</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #A1CB00; secondary
+                      #A1CB00; Secondary Color Green
 
                     </p>
                     <code class="kss-parameters__name">$secondary</code>
