add buttons, layouts and first structure data

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,300">
     <link rel="stylesheet" href="kss-assets/vendor/prism.css">
     <link rel="stylesheet" href="kss-assets/css/kss.css">
-    <link rel="stylesheet" href="./exp-ui/index.scss"/>
+    <link rel="stylesheet" href="./exp-ui/index.css"/>
 
   </head>
 
@@ -39,15 +39,27 @@
           </a>
         </li>
           <li class="kss-nav__item">
-            <a class="" href="section-base.html">
+            <a class="" href="section-brandlines.html">
               <span class="kss-nav__ref">1</span>
-              <span class="kss-nav__name">Base</span>
+              <span class="kss-nav__name">Brandlines</span>
             </a>
           </li>
           <li class="kss-nav__item">
             <a class="" href="section-components.html">
               <span class="kss-nav__ref">2</span>
               <span class="kss-nav__name">Components</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-layout.html">
+              <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Layout</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-specificity.html">
+              <span class="kss-nav__ref">4</span>
+              <span class="kss-nav__name">Specificity</span>
             </a>
           </li>
       </ul>
@@ -57,12 +69,13 @@
 
     <!-- documentation. -->
     <section class="kss-documentation">
+        <article class="kss-markdown">
+          <h1>Experimentality UI</h1>
+<article class="kss-section__content">
+  <h3> Open Source CSS Styleguide </h3>
+</article>
 
-        <!--
-          display each section, in order.
-          the "root" element comes first in this loop, and can be detected using
-          the "#if @first" block as seen below.
-        -->
+        </article>
     </section>
     <!-- /documentation. -->
 
