--- a/styleguide/item-components.html
+++ b/styleguide/item-components.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,300">
     <link rel="stylesheet" href="kss-assets/vendor/prism.css">
     <link rel="stylesheet" href="kss-assets/css/kss.css">
-    <link rel="stylesheet" href="./exp-ui/index.scss"/>
+    <link rel="stylesheet" href="./exp-ui/index.css"/>
 
   </head>
 
@@ -39,9 +39,9 @@
           </a>
         </li>
           <li class="kss-nav__item">
-            <a class="" href="section-base.html">
+            <a class="" href="section-brandlines.html">
               <span class="kss-nav__ref">1</span>
-              <span class="kss-nav__name">Base</span>
+              <span class="kss-nav__name">Brandlines</span>
             </a>
           </li>
           <li class="kss-nav__item">
@@ -51,12 +51,24 @@
             </a>
                 <ul class="kss-nav__subnav">
                     <li class="kss-nav__item ">
-                      <a href="section-components.html#kssref-components-button">
+                      <a href="section-components.html#kssref-components-1">
                         <span class="kss-nav__ref">2.1</span>
                         <span class="kss-nav__name">Button</span>
                       </a>
                     </li>
                 </ul>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-layout.html">
+              <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Layout</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-specificity.html">
+              <span class="kss-nav__ref">4</span>
+              <span class="kss-nav__name">Specificity</span>
+            </a>
           </li>
       </ul>
     </section>
@@ -74,6 +86,7 @@
             <header class="kss-section kss-section--depth-1" id="kssref-components">
 
             <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>21</span></p>
 
               <a class="kss-section__permalink" href="#kssref-components">
                 <h1 class="kss-section__item kss-section__item--depth-1">
@@ -82,6 +95,9 @@
                 </h1>
               </a>
 
+                <div class="kss-section__description"><p>Button styles can be applied to anything with the <code>.btn</code> class applied.
+However, typically you'll want to apply these to only <code>&lt;a&gt;</code> and <code>&lt;button&gt;</code> elements for the best rendering.</p>
+</div>
 
             </article>
 
