--- a/styleguide/item-base-colors.html
+++ b/styleguide/item-base-colors.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,300">
     <link rel="stylesheet" href="kss-assets/vendor/prism.css">
     <link rel="stylesheet" href="kss-assets/css/kss.css">
-    <link rel="stylesheet" href="./exp-ui/index.scss"/>
+    <link rel="stylesheet" href="./exp-ui/index.css"/>
 
   </head>
 
@@ -39,15 +39,21 @@
           </a>
         </li>
           <li class="kss-nav__item">
-            <a class="" href="section-base.html">
+            <a class="" href="section-1.html">
               <span class="kss-nav__ref">1</span>
-              <span class="kss-nav__name">Base</span>
+              <span class="kss-nav__name">Components</span>
             </a>
           </li>
           <li class="kss-nav__item">
-            <a class="" href="section-components.html">
+            <a class="" href="section-2.html">
               <span class="kss-nav__ref">2</span>
-              <span class="kss-nav__name">Components</span>
+              <span class="kss-nav__name">Specificity</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-base.html">
+              <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Base</span>
             </a>
           </li>
       </ul>
@@ -70,12 +76,12 @@
 
               <a class="kss-section__permalink" href="#kssref-base-colors">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">1.1</span>
+                  <span class="kss-section__ref">3.1</span>
                   <span class="kss-section__name">Highlight Colors</span>
                 </h2>
               </a>
 
-                <div class="kss-section__description"><p>Colors we use for higlighting states by brand ?????.</p>
+                <div class="kss-section__description"><p>Colors we use for higlighting states by brand TEST 2.</p>
 </div>
 
                 <ul class="kss-parameters">
