--- a/styleguide/item-components-button.html
+++ b/styleguide/item-components-button.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,300">
     <link rel="stylesheet" href="kss-assets/vendor/prism.css">
     <link rel="stylesheet" href="kss-assets/css/kss.css">
-    <link rel="stylesheet" href="./exp-ui/index.scss"/>
+    <link rel="stylesheet" href="./exp-ui/index.css"/>
 
   </head>
 
@@ -39,14 +39,26 @@
           </a>
         </li>
           <li class="kss-nav__item">
-            <a class="" href="section-base.html">
+            <a class="" href="section-1.html">
               <span class="kss-nav__ref">1</span>
+              <span class="kss-nav__name">Components</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-2.html">
+              <span class="kss-nav__ref">2</span>
+              <span class="kss-nav__name">Specificity</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-base.html">
+              <span class="kss-nav__ref">3</span>
               <span class="kss-nav__name">Base</span>
             </a>
           </li>
           <li class="kss-nav__item">
             <a class="" href="section-components.html">
-              <span class="kss-nav__ref">2</span>
+              <span class="kss-nav__ref">4</span>
               <span class="kss-nav__name">Components</span>
             </a>
           </li>
@@ -70,7 +82,7 @@
 
               <a class="kss-section__permalink" href="#kssref-components-button">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">2.1</span>
+                  <span class="kss-section__ref">4.1</span>
                   <span class="kss-section__name">Button</span>
                 </h2>
               </a>
@@ -89,16 +101,16 @@
 <button class="x-button[modifier class]" > Button </button></div>
 
                   <article class="kss-modifiers__modifier">
-                    <h2 class="kss-modifiers__name">.blue-theme</h2>
+                    <h2 class="kss-modifiers__name">.x-alt</h2>
                     <p class="kss-modifiers__description">A blue button.</p>
-                    <div class="kss-modifiers__example"><input type="button" class="x-button blue-theme" value="Button" />
-<button class="x-buttonblue-theme" > Button </button></div>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-alt" value="Button" />
+<button class="x-buttonx-alt" > Button </button></div>
                   </article>
                   <article class="kss-modifiers__modifier">
-                    <h2 class="kss-modifiers__name">.alert-theme</h2>
+                    <h2 class="kss-modifiers__name">.x-alert</h2>
                     <p class="kss-modifiers__description">Alert Theme</p>
-                    <div class="kss-modifiers__example"><input type="button" class="x-button alert-theme" value="Button" />
-<button class="x-buttonalert-theme" > Button </button></div>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-alert" value="Button" />
+<button class="x-buttonx-alert" > Button </button></div>
                   </article>
               </article>
 
