--- a/styleguide/section-components.html
+++ b/styleguide/section-components.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,300">
     <link rel="stylesheet" href="kss-assets/vendor/prism.css">
     <link rel="stylesheet" href="kss-assets/css/kss.css">
-    <link rel="stylesheet" href="./exp-ui/index.scss"/>
+    <link rel="stylesheet" href="./exp-ui/index.css"/>
 
   </head>
 
@@ -39,9 +39,9 @@
           </a>
         </li>
           <li class="kss-nav__item">
-            <a class="" href="section-base.html">
+            <a class="" href="section-brandlines.html">
               <span class="kss-nav__ref">1</span>
-              <span class="kss-nav__name">Base</span>
+              <span class="kss-nav__name">Brandlines</span>
             </a>
           </li>
           <li class="kss-nav__item">
@@ -51,12 +51,24 @@
             </a>
                 <ul class="kss-nav__subnav">
                     <li class="kss-nav__item ">
-                      <a href="section-components.html#kssref-components-button">
+                      <a href="section-components.html#kssref-components-1">
                         <span class="kss-nav__ref">2.1</span>
                         <span class="kss-nav__name">Button</span>
                       </a>
                     </li>
                 </ul>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-layout.html">
+              <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Layout</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-specificity.html">
+              <span class="kss-nav__ref">4</span>
+              <span class="kss-nav__name">Specificity</span>
+            </a>
           </li>
       </ul>
     </section>
@@ -74,6 +86,7 @@
             <header class="kss-section kss-section--depth-1" id="kssref-components">
 
             <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>21</span></p>
 
               <a class="kss-section__permalink" href="#kssref-components">
                 <h1 class="kss-section__item kss-section__item--depth-1">
@@ -82,17 +95,20 @@
                 </h1>
               </a>
 
+                <div class="kss-section__description"><p>Button styles can be applied to anything with the <code>.btn</code> class applied.
+However, typically you'll want to apply these to only <code>&lt;a&gt;</code> and <code>&lt;button&gt;</code> elements for the best rendering.</p>
+</div>
 
             </article>
 
 
             </header>
-            <section class="kss-section kss-section--depth-2" id="kssref-components-button">
+            <section class="kss-section kss-section--depth-2" id="kssref-components-1">
 
             <article class="kss-section__content">
                 <p class="kss-section__source">Source: <span>src/components/button/_button.scss</span>, line <span>1</span></p>
 
-              <a class="kss-section__permalink" href="#kssref-components-button">
+              <a class="kss-section__permalink" href="#kssref-components-1">
                 <h2 class="kss-section__item kss-section__item--depth-2">
                   <span class="kss-section__ref">2.1</span>
                   <span class="kss-section__name">Button</span>
@@ -110,25 +126,25 @@
                   <h2 class="kss-modifiers__name">Default styling</h2>
 
                 <div class="kss-modifiers__example"><input type="button" class="x-button [modifier class]" value="Button" />
-<button class="x-button[modifier class]" > Button </button></div>
+<button class="x-button [modifier class]" > Button </button></div>
 
                   <article class="kss-modifiers__modifier">
-                    <h2 class="kss-modifiers__name">.blue-theme</h2>
+                    <h2 class="kss-modifiers__name">.x-alt</h2>
                     <p class="kss-modifiers__description">A blue button.</p>
-                    <div class="kss-modifiers__example"><input type="button" class="x-button blue-theme" value="Button" />
-<button class="x-buttonblue-theme" > Button </button></div>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-alt" value="Button" />
+<button class="x-button x-alt" > Button </button></div>
                   </article>
                   <article class="kss-modifiers__modifier">
-                    <h2 class="kss-modifiers__name">.alert-theme</h2>
+                    <h2 class="kss-modifiers__name">.x-alert</h2>
                     <p class="kss-modifiers__description">Alert Theme</p>
-                    <div class="kss-modifiers__example"><input type="button" class="x-button alert-theme" value="Button" />
-<button class="x-buttonalert-theme" > Button </button></div>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-alert" value="Button" />
+<button class="x-button x-alert" > Button </button></div>
                   </article>
               </article>
 
                 <article class="kss-section__markup">
                   <pre><code class="language-markup">&lt;input type&#x3D;&quot;button&quot; class&#x3D;&quot;x-button [modifier class]&quot; value&#x3D;&quot;Button&quot; /&gt;
-&lt;button class&#x3D;&quot;x-button[modifier class]&quot; &gt; Button &lt;/button&gt;</code></pre>
+&lt;button class&#x3D;&quot;x-button [modifier class]&quot; &gt; Button &lt;/button&gt;</code></pre>
                 </article>
 
             </section>
