--- a/styleguide/item-components-1.html
+++ b/styleguide/item-components-1.html
@@ -87,7 +87,7 @@
                 </h2>
               </a>
 
-                <div class="kss-section__description"><p>Button style normalize.</p>
+                <div class="kss-section__description"><p>Button style &amp; normalize.</p>
 </div>
 
             </article>
@@ -97,26 +97,44 @@
 
                   <h2 class="kss-modifiers__name">Default styling</h2>
 
-                <div class="kss-modifiers__example"><input type="button" class="x-button [modifier class]" value="Button" />
-<button class="x-button [modifier class]" > Button </button></div>
+                <div class="kss-modifiers__example"><input type="button" class="x-button [modifier class]" value="Button → " />
+<button class="x-button [modifier class]" > Button → </button>
+<a href="#" class="x-button [modifier class]" > Button → </a></div>
 
                   <article class="kss-modifiers__modifier">
-                    <h2 class="kss-modifiers__name">.x-alt</h2>
+                    <h2 class="kss-modifiers__name">.x-button-alt</h2>
                     <p class="kss-modifiers__description">A blue button.</p>
-                    <div class="kss-modifiers__example"><input type="button" class="x-button x-alt" value="Button" />
-<button class="x-button x-alt" > Button </button></div>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-button-alt" value="Button → " />
+<button class="x-button x-button-alt" > Button → </button>
+<a href="#" class="x-button x-button-alt" > Button → </a></div>
                   </article>
                   <article class="kss-modifiers__modifier">
-                    <h2 class="kss-modifiers__name">.x-alert</h2>
+                    <h2 class="kss-modifiers__name">.x-button-black</h2>
+                    <p class="kss-modifiers__description">Black Theme.</p>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-button-black" value="Button → " />
+<button class="x-button x-button-black" > Button → </button>
+<a href="#" class="x-button x-button-black" > Button → </a></div>
+                  </article>
+                  <article class="kss-modifiers__modifier">
+                    <h2 class="kss-modifiers__name">.x-button-alert</h2>
                     <p class="kss-modifiers__description">Alert Theme</p>
-                    <div class="kss-modifiers__example"><input type="button" class="x-button x-alert" value="Button" />
-<button class="x-button x-alert" > Button </button></div>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-button-alert" value="Button → " />
+<button class="x-button x-button-alert" > Button → </button>
+<a href="#" class="x-button x-button-alert" > Button → </a></div>
+                  </article>
+                  <article class="kss-modifiers__modifier">
+                    <h2 class="kss-modifiers__name">.x-button-disabled</h2>
+                    <p class="kss-modifiers__description">Disabled Theme</p>
+                    <div class="kss-modifiers__example"><input type="button" class="x-button x-button-disabled" value="Button → " />
+<button class="x-button x-button-disabled" > Button → </button>
+<a href="#" class="x-button x-button-disabled" > Button → </a></div>
                   </article>
               </article>
 
                 <article class="kss-section__markup">
-                  <pre><code class="language-markup">&lt;input type&#x3D;&quot;button&quot; class&#x3D;&quot;x-button [modifier class]&quot; value&#x3D;&quot;Button&quot; /&gt;
-&lt;button class&#x3D;&quot;x-button [modifier class]&quot; &gt; Button &lt;/button&gt;</code></pre>
+                  <pre><code class="language-markup">&lt;input type&#x3D;&quot;button&quot; class&#x3D;&quot;x-button [modifier class]&quot; value&#x3D;&quot;Button → &quot; /&gt;
+&lt;button class&#x3D;&quot;x-button [modifier class]&quot; &gt; Button → &lt;/button&gt;
+&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;x-button [modifier class]&quot; &gt; Button → &lt;/a&gt;</code></pre>
                 </article>
 
             </header>
