update config NPM and components

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>exp-ui</title>
+    <title>@exp-ui</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
@@ -22,7 +22,7 @@
         <a class="kss-header__hamburger-trigger">
           <div class="kss-header__hamburger"></div>
         </a>
-        <h1 class="kss-header__title kss-title">exp-ui</h1>
+        <h1 class="kss-header__title kss-title">@exp-ui</h1>
       </section>
     </header>
     <!-- /header. -->
@@ -30,7 +30,7 @@
 
     <!-- navigation. -->
     <section class="kss-navigation">
-      <h1 class="kss-navigation__title kss-title">exp-ui</h1>
+      <h1 class="kss-navigation__title kss-title">@exp-ui</h1>
       <ul class="kss-nav">
         <li class="kss-nav__item">
           <a href="index.html">
@@ -73,6 +73,7 @@
           <h1>Experimentality UI</h1>
 <article class="kss-section__content">
   <h3> Open Source CSS Styleguide </h3>
+  <p> CSS framework, User Interface of Experimentality </p>
 </article>
 
         </article>
