--- a/styleguide/item-components-3.html
+++ b/styleguide/item-components-3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>exp-ui</title>
+    <title>@exp-ui</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
@@ -22,7 +22,7 @@
         <a class="kss-header__hamburger-trigger">
           <div class="kss-header__hamburger"></div>
         </a>
-        <h1 class="kss-header__title kss-title">exp-ui</h1>
+        <h1 class="kss-header__title kss-title">@exp-ui</h1>
       </section>
     </header>
     <!-- /header. -->
@@ -30,7 +30,7 @@
 
     <!-- navigation. -->
     <section class="kss-navigation">
-      <h1 class="kss-navigation__title kss-title">exp-ui</h1>
+      <h1 class="kss-navigation__title kss-title">@exp-ui</h1>
       <ul class="kss-nav">
         <li class="kss-nav__item">
           <a href="index.html">
@@ -45,38 +45,20 @@
             </a>
           </li>
           <li class="kss-nav__item">
-            <a class="" href="section-brandlines-4.html">
-              <span class="kss-nav__ref">2</span>
-              <span class="kss-nav__name">Brandlines</span>
-            </a>
-          </li>
-          <li class="kss-nav__item">
             <a class="" href="section-components.html">
+              <span class="kss-nav__ref">2</span>
+              <span class="kss-nav__name">Components</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-layout.html">
               <span class="kss-nav__ref">3</span>
-              <span class="kss-nav__name">Components</span>
-            </a>
-          </li>
-          <li class="kss-nav__item">
-            <a class="kss-state-active" href="section-components-3.html">
-              <span class="kss-nav__ref">4</span>
-              <span class="kss-nav__name">Components</span>
-            </a>
-          </li>
-          <li class="kss-nav__item">
-            <a class="" href="section-layout-1.html">
-              <span class="kss-nav__ref">5</span>
               <span class="kss-nav__name">Layout</span>
             </a>
           </li>
           <li class="kss-nav__item">
             <a class="" href="section-specificity.html">
-              <span class="kss-nav__ref">6</span>
-              <span class="kss-nav__name">Specificity</span>
-            </a>
-          </li>
-          <li class="kss-nav__item">
-            <a class="" href="section-specificity-2.html">
-              <span class="kss-nav__ref">7</span>
+              <span class="kss-nav__ref">4</span>
               <span class="kss-nav__name">Specificity</span>
             </a>
           </li>
@@ -93,20 +75,19 @@
           the "root" element comes first in this loop, and can be detected using
           the "#if @first" block as seen below.
         -->
-            <header class="kss-section kss-section--depth-1" id="kssref-components-3">
+            <header class="kss-section kss-section--depth-2" id="kssref-components-3">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>19</span></p>
+                <p class="kss-section__source">Source: <span>src/components/components.scss</span>, line <span>4</span></p>
 
               <a class="kss-section__permalink" href="#kssref-components-3">
-                <h1 class="kss-section__item kss-section__item--depth-1">
-                  <span class="kss-section__ref">4</span>
-                  <span class="kss-section__name">Components</span>
-                </h1>
+                <h2 class="kss-section__item kss-section__item--depth-2">
+                  <span class="kss-section__ref">2.3</span>
+                  <span class="kss-section__name">Selector</span>
+                </h2>
               </a>
 
-                <div class="kss-section__description"><p>Button styles can be applied to anything with the <code>.btn</code> class applied.
-However, typically you'll want to apply these to only <code>&lt;a&gt;</code> and <code>&lt;button&gt;</code> elements for the best rendering.</p>
+                <div class="kss-section__description"><p>Selector Input.</p>
 </div>
 
             </article>
