--- a/styleguide/item-components-6.html
+++ b/styleguide/item-components-6.html
@@ -75,29 +75,20 @@
           the "root" element comes first in this loop, and can be detected using
           the "#if @first" block as seen below.
         -->
-            <header class="kss-section kss-section--depth-2" id="kssref-layout-2">
+            <header class="kss-section kss-section--depth-2" id="kssref-components-6">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/layout/grid/_grid.scss</span>, line <span>65</span></p>
+                <p class="kss-section__source">Source: <span>src/components/components.scss</span>, line <span>25</span></p>
 
-              <a class="kss-section__permalink" href="#kssref-layout-2">
+              <a class="kss-section__permalink" href="#kssref-components-6">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">3.2</span>
-                  <span class="kss-section__name">Column Box</span>
+                  <span class="kss-section__ref">2.6</span>
+                  <span class="kss-section__name">Radio Button</span>
                 </h2>
               </a>
 
-                <div class="kss-section__description"><p>Sub container with porcent value  <code>x-grid-col-{porcent}</code> from 10% to 100%
-<br /></p>
-<div class="x-grid-row x-tx-cnt">
-  <div class="x-grid-col-50 x-br-1 x-br-dott x-pd-small">  50% @ 100%  </div>
-  <div class="x-grid-col-50 x-br-1 x-br-dott x-pd-small">  50% @ 100%  </div>
+                <div class="kss-section__description"><p>Radio Button Input.</p>
 </div>
-<div class="x-grid-row x-tx-cnt">
- <div class="x-grid-col-33 x-br-1 x-br-dott x-pd-small">  33% @ 100%  </div>
- <div class="x-grid-col-33 x-br-1 x-br-dott x-pd-small">  33% @ 100%  </div>
- <div class="x-grid-col-33 x-br-1 x-br-dott x-pd-small">  33% @ 100%  </div>
-</div></div>
 
             </article>
 
