--- a/styleguide/item-components.html
+++ b/styleguide/item-components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>exp-ui</title>
+    <title>@exp-ui</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
@@ -22,7 +22,7 @@
         <a class="kss-header__hamburger-trigger">
           <div class="kss-header__hamburger"></div>
         </a>
-        <h1 class="kss-header__title kss-title">exp-ui</h1>
+        <h1 class="kss-header__title kss-title">@exp-ui</h1>
       </section>
     </header>
     <!-- /header. -->
@@ -30,7 +30,7 @@
 
     <!-- navigation. -->
     <section class="kss-navigation">
-      <h1 class="kss-navigation__title kss-title">exp-ui</h1>
+      <h1 class="kss-navigation__title kss-title">@exp-ui</h1>
       <ul class="kss-nav">
         <li class="kss-nav__item">
           <a href="index.html">
@@ -60,6 +60,30 @@
                       <a href="section-components.html#kssref-components-2">
                         <span class="kss-nav__ref">2.2</span>
                         <span class="kss-nav__name">Input</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-3">
+                        <span class="kss-nav__ref">2.3</span>
+                        <span class="kss-nav__name">Selector</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-4">
+                        <span class="kss-nav__ref">2.4</span>
+                        <span class="kss-nav__name">DatePicker</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-5">
+                        <span class="kss-nav__ref">2.5</span>
+                        <span class="kss-nav__name">Checkbox</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-6">
+                        <span class="kss-nav__ref">2.6</span>
+                        <span class="kss-nav__name">Radio Button</span>
                       </a>
                     </li>
                 </ul>
