--- a/styleguide/section-components.html
+++ b/styleguide/section-components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>exp-ui</title>
+    <title>@exp-ui</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
@@ -22,7 +22,7 @@
         <a class="kss-header__hamburger-trigger">
           <div class="kss-header__hamburger"></div>
         </a>
-        <h1 class="kss-header__title kss-title">exp-ui</h1>
+        <h1 class="kss-header__title kss-title">@exp-ui</h1>
       </section>
     </header>
     <!-- /header. -->
@@ -30,7 +30,7 @@
 
     <!-- navigation. -->
     <section class="kss-navigation">
-      <h1 class="kss-navigation__title kss-title">exp-ui</h1>
+      <h1 class="kss-navigation__title kss-title">@exp-ui</h1>
       <ul class="kss-nav">
         <li class="kss-nav__item">
           <a href="index.html">
@@ -60,6 +60,30 @@
                       <a href="section-components.html#kssref-components-2">
                         <span class="kss-nav__ref">2.2</span>
                         <span class="kss-nav__name">Input</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-3">
+                        <span class="kss-nav__ref">2.3</span>
+                        <span class="kss-nav__name">Selector</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-4">
+                        <span class="kss-nav__ref">2.4</span>
+                        <span class="kss-nav__name">DatePicker</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-5">
+                        <span class="kss-nav__ref">2.5</span>
+                        <span class="kss-nav__name">Checkbox</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-components.html#kssref-components-6">
+                        <span class="kss-nav__ref">2.6</span>
+                        <span class="kss-nav__name">Radio Button</span>
                       </a>
                     </li>
                 </ul>
@@ -234,6 +258,82 @@ However, typically you'll want to apply these to only <code>&lt;a&gt;</code> and
 
 
 </code></pre>
+</div>
+
+            </article>
+
+
+            </section>
+            <section class="kss-section kss-section--depth-2" id="kssref-components-3">
+
+            <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/components/components.scss</span>, line <span>4</span></p>
+
+              <a class="kss-section__permalink" href="#kssref-components-3">
+                <h2 class="kss-section__item kss-section__item--depth-2">
+                  <span class="kss-section__ref">2.3</span>
+                  <span class="kss-section__name">Selector</span>
+                </h2>
+              </a>
+
+                <div class="kss-section__description"><p>Selector Input.</p>
+</div>
+
+            </article>
+
+
+            </section>
+            <section class="kss-section kss-section--depth-2" id="kssref-components-4">
+
+            <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/components/components.scss</span>, line <span>11</span></p>
+
+              <a class="kss-section__permalink" href="#kssref-components-4">
+                <h2 class="kss-section__item kss-section__item--depth-2">
+                  <span class="kss-section__ref">2.4</span>
+                  <span class="kss-section__name">DatePicker</span>
+                </h2>
+              </a>
+
+                <div class="kss-section__description"><p>DatePicker Input.</p>
+</div>
+
+            </article>
+
+
+            </section>
+            <section class="kss-section kss-section--depth-2" id="kssref-components-5">
+
+            <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/components/components.scss</span>, line <span>18</span></p>
+
+              <a class="kss-section__permalink" href="#kssref-components-5">
+                <h2 class="kss-section__item kss-section__item--depth-2">
+                  <span class="kss-section__ref">2.5</span>
+                  <span class="kss-section__name">Checkbox</span>
+                </h2>
+              </a>
+
+                <div class="kss-section__description"><p>Checkbox Input.</p>
+</div>
+
+            </article>
+
+
+            </section>
+            <section class="kss-section kss-section--depth-2" id="kssref-components-6">
+
+            <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/components/components.scss</span>, line <span>25</span></p>
+
+              <a class="kss-section__permalink" href="#kssref-components-6">
+                <h2 class="kss-section__item kss-section__item--depth-2">
+                  <span class="kss-section__ref">2.6</span>
+                  <span class="kss-section__name">Radio Button</span>
+                </h2>
+              </a>
+
+                <div class="kss-section__description"><p>Radio Button Input.</p>
 </div>
 
             </article>
